Fix bug where the menu does not open on Safari on iOS.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -378,22 +378,27 @@
 	background-color: fade(@color-swatch6, 95%);
 	border: 2px solid @color-swatch7;
 	position: fixed;
-	top: 40px;
+	top: 30px;
 	right: -350px;
 	width: 350px;
 	z-index: 350;
-	.transition( all, 0.5s, ease);
+	.transition(all, 0.5s, ease);
 	@media @desktop-lg {
-		right: 40px;
-	}
-	@media only screen and (max-height: 450px) {
-		height: auto;
+		right: 30px;
 	}
 	@media @mobile {
 	    top: 0;
 		width: 100%;
 		height: 100%;
 		right: -100%;
+	    -webkit-transition-property: none;
+        -moz-transition-property: none;
+        -o-transition-property: none;
+        transition-property: none;
+	}
+	@media only screen and (max-height: 450px) {
+		height: auto;
+	    .transition(all, 0.5s, ease);
 	}
 	.widget.socialicons {
 		padding: 40px;
@@ -406,6 +411,22 @@
 			padding: 30px;
 		}
 	}
+
+    .menu-active & {
+    	right: 30px;
+    	top: 30px;
+	    .transition(all, 0.5s, ease);
+    	
+    	@media @mobile {
+    		top: 0;
+    		right: 0;
+    		left: 0;
+    		-webkit-transition-property: none;
+            -moz-transition-property: none;
+            -o-transition-property: none;
+            transition-property: none;
+    	}
+    }
 }
 
 .bk-pt-default {
@@ -563,57 +584,100 @@
 		}
 		position: absolute;
 		display: inline-block;
-        top: 20px;
+        top: 0;
 		left: -80px;
-		width: 40px;
-		height: 40px;
-		overflow: hidden;
+		width: 35px;
+		height: 23px;
+		overflow: visible;
 		cursor: pointer;
 		outline: none;
 		opacity: 0.5;
 		.transition(all, 0.5s, ease);
 		@media @tablet {
 		    left: -85px;
+		    overflow: visible;
 		}
 		@media @mobile {
+		    top: 25px;
 		    left: -65px;
+		    overflow: visible;
+    		-webkit-transition-property: none;
+            -moz-transition-property: none;
+            -o-transition-property: none;
+            transition-property: none;
+		    
+			.menu-active & {
+			    top: 25px;
+			    right: 25px;
+			    left: auto;
+			}
 		}
 		&:hover {
 			opacity: 1;
-			.transition(all, 0.5s, ease);
 		}
+			
+		// Top and bottom bar
+		
+		&:before,
 		&:after {
 			content: '';
 			position: absolute;
-			width: 34px;
+			right: 0;
 			height: 2px;
+			width: 35px;
 			background: @color-swatch7;
-			box-shadow: 0 10px 0 @color-swatch7, 0 20px 0 @color-swatch7;
+		    box-shadow: none;
+	        .transition-delay-2items(0s, 0.05s);
+    		@media @tablet {
+    			right: 0;
+    			height: 2px;
+    			width: 35px;
+    			background: @color-swatch7;
+    		    box-shadow: none;
+    		}
+    		@media @mobile {
+    			right: 0;
+    			height: 2px;
+    			width: 35px;
+    			background: @color-swatch7;
+    		    box-shadow: none;
+    		}
+	        
+			.menu-active & {
+		        top: 10px;
+			}
+		}
+		
+		// Top Bar
+
+		&:before {
+			top: 0;
+			box-shadow: 0 10px 0 @color-swatch7;
+			.menu-active & {
+			    box-shadow: none;
+			    -webkit-transform: rotate(45deg);
+			    -moz-transform: rotate(45deg);
+			    -ms-transform: rotate(45deg);
+			    -o-transform: rotate(45deg);
+			    transform: rotate(45deg);
+			}
+		}
+		
+		// Bottom Bar
+
+		&:after {
+		    top: 21px;
+			.menu-active & {
+			    -webkit-transform: rotate(-45deg);
+			    -moz-transform: rotate(-45deg);
+			    -ms-transform: rotate(-45deg);
+			    -o-transform: rotate(-45deg);
+			    transform: rotate(-45deg);
+			}
 		}
 	}
 	.bk-overlay {
 		width: 100%;
-	}
-}
-
-.menu-active .widget.extendednavigation a.pull {
-	@media @mobile {
-		left: inherit;
-		right: 40px;
-		top: 40px;
-	}
-}
-
-
-.menu-active .bk-nav { 
-	display: table;
-	position: fixed;
-	right: 40px; 
-	top: 40px;
-	.transition(all, 0.5s, ease);
-	@media @mobile {
-		top: 0;
-		right: 0;
 	}
 }
 
